# mutax

./: Dockerfile  LICENSE  README.md  docker-compose.yml  requirements.txt
examples/: config.yml  payloads.txt
mutax/: pyproject.toml
mutax/cli/: app.py
mutax/core/: pipeline.py
mutax/docs/: ARCHITECTURE.md
mutax/encoders/: url.py
mutax/examples/: example-output.json  generated-payloads.txt
mutax/mutators/: __init__.py  path.py
mutax/mutax/: __init__.py  __main__.py
mutax/mutax/core/: config.py  engine.py  models.py  mutator.py  scoring.py
mutax/mutax/encoders/: __init__.py
mutax/mutax/mutators/: encoding.py  text.py
mutax/mutax/output/: exporters.py  rich_renderer.py
mutax/mutax/profiles/: __init__.py
mutax/mutax/utils/: analysis.py
mutax/output/: __init__.py
mutax/profiles/: registry.py
mutax/tests/: test_cli.py  test_engine.py
tests/: test_mutators.py
